--- a/static/templates/userinfo.html
+++ b/static/templates/userinfo.html
@@ -8,7 +8,19 @@
     <title>GraphQL</title>
 </head>
 <body>
-    <h1>User info</h1>
-    <div id="graphContainer" style="background-color: yellow; padding: 20px; width: fit-content; height: fit-content;"></div>
+    <div style="height: 400px; background-color: red; width: 100%;"></div>
+    <div class="container">
+        <div id="progressGraphContainer" class="progressGraphContainer"></div>
+        <div id="xpByTaskContainer" class="xpByTaskContainer">
+            <div class="xpByTaskInnerContainer">
+                <div style="width: fit-content; height: 30px; position: absolute; bottom: 0;">
+                    <svg id="comparisonGraph" width="700px" height="100%"></svg>
+                </div>
+                <div id="xpByTaskGraphContainer" class="xpByTaskGraphContainer">
+                    <svg id="barGraph" width="100%" height="100%"></svg>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
