--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -21,7 +21,7 @@
             <div class="errorMessage">
                 <span id="password-error"></span>
             </div><br>
-            <button class="button-33" type="submit">Log in</button><br><br>
+            <button id="loginBtn" class="button-33" type="submit" disabled>Log in</button><br><br>
         </form>
     </div>
 </body>
