--- a/static/styles.css
+++ b/static/styles.css
@@ -130,3 +130,25 @@ body {
     border-radius: 10px;
     text-align: center;
 }
+
+::-webkit-scrollbar {
+    width: 20px;
+    height: 20px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0.25);
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 20px;
+    border-radius: 20px;
+    background-color: rgb(125, 153, 196);
+    border: 1px solid black;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    -webkit-border-radius: 20px;
+    border-radius: 20px;
+    background-color: rgb(79, 108, 151);
+}
